Changed Entirely. Update

--- a/index.html
+++ b/index.html
@@ -1,215 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link href="https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400i|Oswald:300,400,700" rel="stylesheet" media="all">
-  <style>
-    body 
-    {
-      padding: 5vw 5vh;
-      padding-top: 1vh;
-      font-family:'Sorts Mill Goudy', Georgia, serif;
-    }
-
-    h1, h2, h3, h4, h5, h6 
-    {
-     font-family:'Oswald',Impact,'Arial Black',Arial,Helvetica,sans-serif;
-   }
-
-   .monospace {
-     font-family: monospace;
-   }
-
-   .muted {
-    color:#666;
-  }
-  abbr {
-    border-bottom: dotted 1px #cccddd;
-    cursor: help;
-    display:inline-block;
-    line-height:1;
-  }
-  a abbr {text-decoration:underline;}
-
-  .text--normal {font-weight:normal;}
-  .text--bigger {font-size:1.25em;}
-</style>
-</head>
-<body>
-  <div align="center">
-    <div align="left">
-      <ul style="list-style-type: none;">
-        <li>
-          <h1>Abhinaba Chakraborty</h1>
-        </li>
-        <li>M.Tech CS, ISI Kolkata</li>
-        <li>B.E Electrical, Jadavpur University</li>
-        <li>
-          <a target="_top" style="text-decoration: none;" href="#">abhinabacr</a>4
-          AT gmail [dot] com &nbsp;&nbsp;
-          <a target="_top" style="text-decoration: none;" href="#internship">Internships</a>
-          &nbsp;&nbsp;
-          <a target="_top" style="text-decoration: none;" href="#projects">Projects</a>
-          &nbsp;&nbsp;
-          <a target="_top" style="text-decoration: none;" href="#publications">Publications</a>
-          &nbsp;&nbsp;
-          <a target="_top" style="text-decoration: none;" href="#presentations">Presentations</a>
-          &nbsp;&nbsp;
-        </li>
-      </ul>
-
-      <hr>
-
-      <div style="text-align: left; display: inline-flex; justify-content: center; align-items: center;">
-        <div style="width: 90vw; height: initial; flex: 1">
-          <ul>
-            <li  style="list-style-type:none;">
-              Hey, I'm <b>Abhinaba</b> and I'm currently stuck in 421 loop.
-            </li>
-            <!-- <li style="list-style-type:none">
-              Hey!. Also I made some things using ChatGPT. 
-              <ul>
-                <li style="list-style-type:none;">
-                  <a href="tic-tac-toe.html">Tic-Tac-Toe</a>
-                </li>
-                <li style="list-style-type:none;">
-                  <a href="guess-number.html">Guess Number Game</a>
-                </li>
-                <li style="list-style-type:none;">
-                  <a href="simple-game.html">Simple Game</a>
-                </li>
-              </ul>
-            </li>
-            <li style="list-style-type: none;">
-              Yeah its dumb. but who cares. I like those things.
-            </li> -->
-            <li style="list-style-type: none;">
-              This site {was,is,will be} under construction
-            </li>
-          </ul>
-        </div>
-
-        <!-- <div style="width: 5vw; height: initial; flex: 2">
-          I have no specific interest. I like to do things and see what happens.
-        </div> -->
-      </div>
-    </div>
-  </div>
-
-  <hr>
-
-  <div id="internship" style="text-align: left; display: flex; justify-content: center; align-items: center;">
-    <div style="width: 30vw; height: initial; flex: 1">
-      I have done <strong>internships</strong> at various organisations in various fields from image processing, to MLOps, Maching Learning, Computer System Architecture etc.
-    </div>
-    <div style="width: 70vw; hieght: initial; flex: 2">
-      <ol>
-        <li style="list-style-type:none;">
-          <i><strong>Airtel Digital</strong></i><br>
-          During summer break of my M.Tech at ISI, Kolkata I served as an Engineering Intern at Ad-Specialisation group of Airtel Digital where I worked with India scale data.~300 Million(Trust me its huge).<br>
-          There I made a library to detect Data Drift(A typical Machine Learning problem data scientists, ML engineer face after deploying a ML model) in the data. I tested my library on a india scale user data and integrated with the system to get better result.<br>
-          This library reduces the manual effort with the existing libraries by nearly 70%.
-        </li>
-        <hr>
-        <li style="list-style-type: none;">
-          <i><strong>IIT, Kharagpur</strong></i><br>
-          During my summer break of B.E third year at Jadavpur Univeristy I worked as research intern at IIT, Kharagpur. There I worked on satellite image classification problems.<br>
-          Other than that I dont remember much as it was nearly >3 years ago
-        </li>
-      </ol>
-    </div>
-  </div>
-
-  <hr>
-
-  <div id="projects" style="text-align: center; display: flex; justify-content: center; align-items: center;">
-    <div style="width: 30vw; height: initial; flex: 1">
-      I am currently doing my M.Tech Dissertation and M.Tech Minor Project. Prior to that I completed B.E thesis, some course projects and some of my own personal project.
-    </div>
-    <div style="width: 70vw; height: initial; flex: 2">
-      <ol>
-        <li style="list-style-type: none;">
-          <i><a href="https://github.com/cohitherewer/ISI-CS/tree/main/Information%20Retrieval/Simple%20Search%20Engine" style="text-decoration:none;">Search Engine</a></i><br>
-          It is a course project of Information Retrieval of ISI M.Tech CS. Here I implemented searching and retrieving documents module from scratch in Pylucene.
-        </li>
-        <li style="list-style-type: none;">
-          <i><a href="https://github.com/cohitherewer/ISI-CS/tree/main/CLAB%20Project" style="text-decoration:none">Maximum Heapable Subsequence</a></i><br>
-          It is a course project for our computing lab at ISI,K. Implemented in C++.
-        </li>
-      </ol>
-    </div>
-  </div>
-
-  <hr>
-
-  <div id="publications" style="text-align: left; display: block; justify-content: center; align-items: center;">
-    <div style="width: auto; height: initial; flex: 1">
-      Speaking of my <strong><i>Publications</i></strong> till now I have only one publication in the domain of High Voltage Engineering and Maching Learning.
-    </div>
-    <div style="width: auto; height: initial; flex: 2">
-      <ol>
-
-        <li>
-          <div style="display: flex;">
-            <div style="width: 80vw">
-              Mathematical Morphology aided Random Forest Classifier based High Voltage Porcelain Insulator Contamination level Classification
-            </div>
-            <div style="20vw;">
-              <a href="https://ieeexplore.ieee.org/document/9230691">[Publication]</a>
-            </div>
-          </div>
-        </li>
-
-      </ol>
-    </div>
-  </div>
-
-  <hr>
-
-  <div id="presentations" style="text-align: left; display: block; justify-content: center; align-items: center;">
-    <div style="width: auto; height: initial; flex: 1">
-      I have given some <i><strong>Presentations</strong></i> mainly during my M.Tech days. Listing some of them, 
-    </div>
-
-    <div style="width: auto; height: initial; flex: 2">
-      <ol>
-
-        <li>
-          <div style="display: flex;">
-            <div style="width: 50vw">
-              Graph Algorithms
-            </div>
-            <div style="width: 50vw;">
-              <ol>
-                <li>
-                  <a href="Graph Algo Presentation 1.pdf">[slide 1]</a>
-                </li>
-                <li>
-                  <a href="Graph Algo Presentation 2.pdf">[slide 2]</a>
-                </li>
-              </ol>
-            </div>
-          </div>
-        </li>
-
-        <li>
-          <div style="display: flex;">
-            <div style="width: 50vw">
-              Test Case Generation for SI Protocol.
-            </div>
-            <div style="width: 50vw;">
-              <ol>
-                <li>
-                  <a href="Test Gen SI.pdf">[slide 1]</a>
-                </li>
-              </ol>
-            </div>
-          </div>
-        </li>
-      </ol>
-    </div>
-  </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-..." crossorigin="anonymous"><title>Portfolio | Abhinaba Chakraborty</title><script defer="defer" src="/static/js/main.d87d417d.js"></script><link href="/static/css/main.33ea8078.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script></html>
